Fixes #2826, bottom aligned has incorrect flex value

--- a/src/definitions/views/item.less
+++ b/src/definitions/views/item.less
@@ -387,13 +387,13 @@
 --------------------*/
 
 .ui.items > .item > .image + [class*="top aligned"].content {
-  align-self: top;
+  align-self: flex-start;
 }
 .ui.items > .item > .image + [class*="middle aligned"].content {
   align-self: center;
 }
 .ui.items > .item > .image + [class*="bottom aligned"].content {
-  align-self: bottom;
+  align-self: flex-end;
 }
 
 
